--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -48,7 +48,7 @@
           <%# 投稿に紐づくコメントを一覧する処理を記述する %>
           <% @comments.each do |comment| %>
             <li class="comments_list">
-                <strong><%= link_to comment.user.name, user_path(@prototype.user), class: :comment_user %>:</strong>
+                <strong><%= link_to comment.user.name, user_path(comment.user), class: :comment_user %>:</strong>
                  <strong><%= comment.text %> </strong>
             </li>
           <% end %>
